--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "notes-backend",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node -r ./boot-paths.js dist/index.js",
@@ -18,14 +19,18 @@
   },
   "devDependencies": {
     "@ls-lint/ls-lint": "^1.11.0",
+    "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-datetime": "0.0.37",
+    "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/mocha": "^9.1.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
+    "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "chai": "^4.3.6",
@@ -49,6 +54,16 @@
     "typescript": "~4.5.5"
   },
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "express": "^4.17.3",
+    "inversify": "^6.0.1",
+    "inversify-binding-decorators": "^4.0.0",
+    "morgan-body": "^2.6.6",
+    "multer": "^1.4.4",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0",
     "tsconfig-paths": "^3.13.0"
   },
   "engines": {
