--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,7 @@ services:
         GID: $GID
     container_name: notes-backend
     hostname: server
-    command: [ "/bin/sh" ]
-    tty: true
+    command: ["npm", "run", "dev"]
     ports:
       - "3000:3000"
       - "9229:9229"
@@ -19,3 +18,6 @@ services:
     working_dir: /usr/src/app
     env_file:
       - .env
+
+volumes:
+  postgres:
