--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node -r ./boot-paths.js dist/index.js",
-    "dev": "ts-node-dev --watch=src/**/*.ts --inspect=0.0.0.0:9229 --exit-child --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+    "start": "node -r ./boot-paths.js dist/main",
+    "dev": "nest start --debug --watch",
     "test": "mocha",
     "test:watch": "npm run test -- --watch",
     "pretest:cov": "rimraf coverage .nyc_output",
@@ -13,24 +13,24 @@
     "lint": "eslint \"{src,test}/**/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "rimraf dist",
-    "build": "tsc --project tsconfig-build.json",
-    "build:watch": "npm run build -- --watch",
+    "build": "nest build",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@ls-lint/ls-lint": "^1.11.0",
-    "@types/body-parser": "^1.19.2",
+    "@nestjs/cli": "^8.2.2",
+    "@nestjs/schematics": "^8.0.7",
+    "@nestjs/testing": "^8.4.0",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-datetime": "0.0.37",
-    "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/mocha": "^9.1.0",
-    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
-    "@types/validator": "^13.7.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "chai": "^4.3.6",
@@ -49,21 +49,15 @@
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
+    "supertest": "^6.2.2",
     "ts-node": "^10.6.0",
-    "ts-node-dev": "^1.1.8",
     "typescript": "~4.5.5"
   },
   "dependencies": {
-    "body-parser": "^1.19.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "express": "^4.17.3",
-    "inversify": "^6.0.1",
-    "inversify-binding-decorators": "^4.0.0",
-    "morgan-body": "^2.6.6",
-    "multer": "^1.4.4",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/core": "^8.4.0",
+    "@nestjs/platform-express": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0",
     "tsconfig-paths": "^3.13.0"
   },
   "engines": {
