--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ defaults:
 jobs:
   lint:
     container:
-      image: node:lts
+      image: node:16
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
           rm -rf *
   test:
     container:
-      image: node:lts
+      image: node:16
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
