--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "chai": "^4.3.6",
@@ -57,7 +58,10 @@
     "@nestjs/common": "^8.4.0",
     "@nestjs/core": "^8.4.0",
     "@nestjs/platform-express": "^8.4.0",
+    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/terminus": "^8.0.4",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "tsconfig-paths": "^3.13.0"
   },
   "engines": {
