--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@app/*": [
-        "*"
-      ],
-      "@test/*": [
-        "../test/*"
-      ]
+      "@app/*": ["*"],
+      "@test/*": ["../test/*"]
     },
     "declaration": true,
     "declarationMap": true,
@@ -15,9 +11,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "incremental": false,
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "module": "commonjs",
     "moduleResolution": "Node",
     "noImplicitAny": true,
@@ -33,13 +27,7 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "target": "ES2019",
-    "typeRoots": [
-      "node_modules/@types",
-      "@types"
-    ]
+    "typeRoots": ["node_modules/@types", "@types"]
   },
-  "include": [
-    "src",
-    "test"
-  ]
+  "include": ["src", "test"]
 }
