--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/sinon-chai": "^3.2.8",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "chai": "^4.3.6",
@@ -47,6 +49,7 @@
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
     "mocha": "^9.2.1",
+    "mocha.parallel": "^0.15.6",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
@@ -62,9 +65,13 @@
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^8.0.4",
+    "argon2": "^0.28.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
-    "tsconfig-paths": "^3.13.0"
+    "tsconfig-paths": "^3.13.0",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.x",
@@ -88,7 +95,6 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "all": true,
     "include": [
       "src/**/*.ts"
     ],
