--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,8 @@ jobs:
   lint:
     container:
       image: node:16
+      env:
+        npm_config_build_from_source: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -36,6 +38,8 @@ jobs:
   test:
     container:
       image: node:16
+      env:
+        npm_config_build_from_source: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
