feat: add prisma orm

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -11,10 +11,11 @@ ignore:
   - .github
   - .idea
   - .ls-lint.yml
+  - tsconfig.build.json
   - .nyc_output
   - .husky
   - node_modules
   - docker
   - dist
   - "@types"
-  - tsconfig.build.json
+  - prisma
