--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args:
         UID: $UID
         GID: $GID
-    container_name: notes-backend
+    container_name: server
     hostname: server
     command: ["npm", "run", "dev"]
     ports:
@@ -18,6 +18,19 @@ services:
     working_dir: /usr/src/app
     env_file:
       - .env
+    depends_on:
+      - postgres
+
+  postgres:
+    container_name: postgres
+    image: postgres:14-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: noterr
+      POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - postgres:/var/lib/postgresql/data
 
 volumes:
   postgres:
