--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/faker": "^5.5.9",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
+    "@types/pg": "^8.6.5",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "@types/supertest": "^2.0.11",
@@ -41,6 +42,7 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-datetime": "^1.8.0",
+    "connection-string": "^4.3.5",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -51,7 +53,9 @@
     "mocha": "^9.2.1",
     "mocha.parallel": "^0.15.6",
     "nyc": "^15.1.0",
+    "pg": "^8.7.3",
     "prettier": "^2.5.1",
+    "prisma": "^3.10.0",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
@@ -65,6 +69,7 @@
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^8.0.4",
+    "@prisma/client": "^3.10.0",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
