--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,6 +41,13 @@ jobs:
       image: node:16
       env:
         npm_config_build_from_source: true
+        DATABASE_URL: postgresql://noterr@postgres:5432/noterr
+    services:
+      postgres:
+        env:
+          POSTGRES_USER: noterr
+          POSTGRES_HOST_AUTH_METHOD: trust
+        image: postgres:14-alpine
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -59,7 +66,9 @@ jobs:
           fi
           npx patch-package
       - name: Test
-        run: npm run test:cov
+        run: |
+          npx prisma generate
+          npm run test:cov
       - name: Cleanup
         if: ${{ always() }}
         run: |
