--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@ls-lint/ls-lint": "^1.11.0",
     "@nestjs/cli": "^8.2.2",
-    "@nestjs/schematics": "^8.0.7",
+    "@nestjs/schematics": "^8.0.8",
     "@nestjs/testing": "^8.4.0",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
@@ -37,8 +37,8 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-datetime": "^1.8.0",
@@ -60,12 +60,13 @@
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
     "supertest": "^6.2.2",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.7.0",
     "typescript": "~4.5.5"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.0",
     "@nestjs/core": "^8.4.0",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^8.0.4",
