--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-DATABASE_URL="postgresql://noterr@postgres:5432/noterr"
+NOTERR_DATABASE_URL="postgresql://noterr@postgres:5432/noterr"
+NOTERR_JWT_SECRET="jwt_secret"
+NOTERR_JWT_EXPIRES_IN="5m"
