--- a/package.json
+++ b/package.json
@@ -22,25 +22,27 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@ls-lint/ls-lint": "^1.11.0",
-    "@nestjs/cli": "^8.2.2",
+    "@nestjs/cli": "^8.2.4",
     "@nestjs/schematics": "^8.0.8",
-    "@nestjs/testing": "^8.4.0",
+    "@nestjs/testing": "^8.4.2",
     "@types/chai": "^4.3.0",
+    "@types/chai-arrays": "^2.0.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-datetime": "0.0.37",
     "@types/faker": "^5.5.9",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.22",
     "@types/pg": "^8.6.5",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "chai": "^4.3.6",
+    "chai-arrays": "^2.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-datetime": "^1.8.0",
     "connection-string": "^4.3.5",
@@ -55,8 +57,8 @@
     "mocha.parallel": "^0.15.6",
     "nyc": "^15.1.0",
     "pg": "^8.7.3",
-    "prettier": "^2.5.1",
-    "prisma": "^3.10.0",
+    "prettier": "^2.6.0",
+    "prisma": "^3.11.0",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
@@ -65,19 +67,19 @@
     "typescript": "~4.5.5"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.0",
-    "@nestjs/core": "^8.4.0",
+    "@nestjs/common": "^8.4.2",
+    "@nestjs/core": "^8.4.2",
     "@nestjs/jwt": "^8.0.0",
-    "@nestjs/platform-express": "^8.4.0",
+    "@nestjs/platform-express": "^8.4.2",
     "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^8.0.4",
-    "@prisma/client": "^3.10.0",
+    "@nestjs/terminus": "^8.0.6",
+    "@prisma/client": "^3.11.0",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
-    "tsconfig-paths": "^3.13.0",
+    "tsconfig-paths": "^3.14.1",
     "uuid": "^8.3.2"
   },
   "engines": {
