--- a/package.json
+++ b/package.json
@@ -20,45 +20,44 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@ls-lint/ls-lint": "^1.11.0",
     "@nestjs/cli": "^8.2.4",
     "@nestjs/schematics": "^8.0.8",
-    "@nestjs/testing": "^8.4.2",
+    "@nestjs/testing": "^8.4.3",
     "@types/chai": "^4.3.0",
     "@types/chai-arrays": "^2.0.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-datetime": "0.0.37",
-    "@types/faker": "^5.5.9",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.22",
+    "@types/node": "^17.0.23",
     "@types/pg": "^8.6.5",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
-    "@types/validator": "^13.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "chai": "^4.3.6",
     "chai-arrays": "^2.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-datetime": "^1.8.0",
     "connection-string": "^4.3.5",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-import": "^2.25.4",
-    "faker": "^5.5.3",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
     "mocha": "^9.2.2",
     "mocha.parallel": "^0.15.6",
     "nyc": "^15.1.0",
     "pg": "^8.7.3",
-    "prettier": "^2.6.0",
-    "prisma": "^3.11.0",
+    "prettier": "^2.6.1",
+    "prisma": "^3.11.1",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
@@ -67,13 +66,13 @@
     "typescript": "~4.5.5"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.2",
-    "@nestjs/core": "^8.4.2",
+    "@nestjs/common": "^8.4.3",
+    "@nestjs/core": "^8.4.3",
     "@nestjs/jwt": "^8.0.0",
-    "@nestjs/platform-express": "^8.4.2",
-    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/platform-express": "^8.4.3",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/terminus": "^8.0.6",
-    "@prisma/client": "^3.11.0",
+    "@prisma/client": "^3.11.1",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
